--- a/Enclave/CMakeLists.txt
+++ b/Enclave/CMakeLists.txt
@@ -6,8 +6,9 @@ file(GLOB TRUSTED_CPP_FILES
 file(GLOB TRUSTED_C_FILES
         "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
 
-set(Trusted_Include_Paths		${ENCLAVE_DIR} ${COMMON_INCLUDE_DIR} ${SGXSDK_INCLUDE_DIRS} ${SGXSDK_INCLUDE_DIRS}/tlibc ${SGX_LIBCXX_PATH})
-set(TRUSTED_SRCS				${TRUSTED_CPP_FILES} ${TRUSTED_C_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/Enclave_t.c)
+set(WAMR_INCLUDES                       ${WAMR_EMBEDDING_API_INCLUDE_PATH} ${WAMR_DIR}/core/shared/utils ${WAMR_DIR}/core/shared/platform/linux-sgx)
+set(Trusted_Include_Paths		${ENCLAVE_DIR} ${COMMON_INCLUDE_DIR} ${SGXSDK_INCLUDE_DIRS} ${SGXSDK_INCLUDE_DIRS}/libcxx ${SGXSDK_INCLUDE_DIRS}/tlibc ${SGXSDK_INCLUDE_DIRS}/stlport ${SGX_LIBCXX_PATH} ${WAMR_INCLUDES})
+set(TRUSTED_SRCS			${TRUSTED_CPP_FILES} ${TRUSTED_C_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/Enclave_t.c)
 
 set_property(DIRECTORY PROPERTY ADDITIONAL_MAKE_CLEAN_FILES
         "${ENCLAVE_DIR}/Enclave_t.c"
