--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,18 +1,20 @@
-set(UNTRUSTED_DIR		    "${CMAKE_CURRENT_SOURCE_DIR}")
-set(APP_INCLUDE_PATHS 		 ${UNTRUSTED_DIR} ${SGXSDK_INCLUDE_DIRS} ${COMMON_INCLUDE_DIR})
+set(UNTRUSTED_DIR		 "${CMAKE_CURRENT_SOURCE_DIR}")
+set(APP_INCLUDE_PATHS 		 ${UNTRUSTED_DIR} ${UNTRUSTED_DIR}/Utility ${SGXSDK_INCLUDE_DIRS} ${COMMON_INCLUDE_DIR})
 
-set(CMAKE_C_FLAGS 		    "${CMAKE_C_FLAGS} ${SGX_COMMON_CFLAGS} -fPIC -fpie -fstack-protector -Wformat -Wformat-security -Wno-attributes")
-set(CMAKE_CXX_FLAGS 		"${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -std=c++11")
+set(CMAKE_C_FLAGS 		 "${CMAKE_C_FLAGS} ${SGX_COMMON_CFLAGS} -fPIC -fpie -fstack-protector -Wformat -Wformat-security -Wno-attributes")
+set(CMAKE_CXX_FLAGS 		 "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -std=c++11")
 
-set(APP_Link_Flags		    "${SGX_COMMON_CFLAGS} ${VMLIB_UNTRUSTED} -L${SGX_LIBRARY_PATH} -l${SGX_URTS_LIB} -l${SGX_USVC_LIB} -lpthread")
+set(APP_Link_Flags		 "${SGX_COMMON_CFLAGS} ${VMLIB_UNTRUSTED} -L${SGX_LIBRARY_PATH} -l${SGX_URTS_LIB} -l${SGX_USVC_LIB} -lpthread")
 
 
 
 file(GLOB UNTRUSTED_CPP_FILES
-        "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+        "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/Utility/*.cpp")
 
 file(GLOB UNTRUSTED_C_FILES
-        "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
+        "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
+        "${CMAKE_CURRENT_SOURCE_DIR}/Utility/*.c")
 
 
 set(APP_SRC_FILES 		     ${UNTRUSTED_CPP_FILES} ${UNTRUSTED_C_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/Enclave_u.c)
